[package]
name = "gg"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossterm = "0.29.0"
git2 = "0.20.3"
ratatui = "0.30.0"

# Tree-sitter for syntax highlighting
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-bash = "0.23"
# tree-sitter-toml removed due to version incompatibility with tree-sitter-highlight
tree-sitter-yaml = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-ruby = "0.23"
tree-sitter-md = "0.3"
