[package]
name = "gitspine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossterm = "0.29.0"
dirs = "5"
git2 = "0.20.3"
notify = "6"
open = "5"
ratatui = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
two-face = "0.5.1"
ureq = { version = "2", features = ["json"] }
